# video_recorder_player

./: main.cpp  readme.txt
common/: ffmpeg_helper.h  utils.cpp  utils.h
screencapture/: AudioEncoder.h  ScreenCapture.cpp  ScreenCapture.h  VideoEncoder.cpp  VideoEncoder.h  VideoRecorder.cpp  VideoRecorder.h
test/: CMakeLists.txt  a.out  test_cpp.cpp  test_rgb2yuv.cpp
